--- a/src/tool.yml
+++ b/src/tool.yml
@@ -183,3 +183,40 @@ tools:
           The mode to use when downloading the data. If 'replace' is
           selected, the data will be replaced. If 'append' is selected,
           the data will be appended to the existing data.
+  init_meteocatalog:
+    title: MeteoCatalog
+    description: |
+      Initialize meteocatalog with all the available data sources.  
+      This will download all variables from all the dataset above and 
+      the entire time period.
+    version: 0.1
+    parameters:
+      variables:
+        type: enum
+        values:
+          - all
+        description: |
+          The variables to download. If 'all' is selected, all 
+          variables will be downloaded.
+      start_year:
+        type: integer
+        min: 1931
+        max: 2024
+        description: |
+          The start year of the data to download. The data starts in 1931.
+      end_year:
+        type: integer
+        min: 1931
+        max: 2024
+        description: |
+          The end year of the data to download. The data is available
+          up to 2024.
+      mode:
+        type: enum
+        values:
+          - replace
+          - append
+        description: |
+          The mode to use when downloading the data. If 'replace' is
+          selected, the data will be replaced. If 'append' is selected,
+          the data will be appended to the existing data.
